--- a/src/Gab/App.xaml
+++ b/src/Gab/App.xaml
@@ -3,6 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Gab.App">
     <Application.Resources>
+        <ResourceDictionary>
 
+            <Color x:Key="ColorPrimary">#0073a6</Color>
+            <Color x:Key="ColorPrimaryDark">#1976D2</Color>
+            <Color x:Key="ColorPrimaryLight">#00bcd4</Color>
+            <Color x:Key="ColorAccent">#D38C23</Color>
+
+            <Color x:Key="GrayPrimary">#ADB7BE</Color>
+            <Color x:Key="GrayLight">#ECF0F1</Color>
+            <Color x:Key="GrayMedium">#9AA4AB</Color>
+            <Color x:Key="GrayDark">#76828A</Color>
+
+            <!--Material Design Colors-->
+            <Color x:Key="Red">#F44336</Color>
+            <Color x:Key="LightRed">#FC795B</Color>
+            <Color x:Key="DeepOrange">#FF5722</Color>
+            <Color x:Key="Orange">#FF9800</Color>
+            <Color x:Key="Amber">#FFA000</Color>
+            <Color x:Key="Yellow">#FFEB3B</Color>
+            <Color x:Key="Pink">#E91E63</Color>
+            <Color x:Key="DeepPurple">#673AB7</Color>
+            <Color x:Key="Purple">#9C27C0</Color>
+            <Color x:Key="LightPurple">#BA68C8</Color>
+            <Color x:Key="Indigo">#3F51B5</Color>
+            <Color x:Key="Blue">#5677fc</Color>
+            <Color x:Key="DarkLightBlue">#1976D2</Color>
+            <Color x:Key="LightBlue">#2196F3</Color>
+            <Color x:Key="Cyan">#00bcd4</Color>
+            <Color x:Key="Teal">#009688</Color>
+            <Color x:Key="Green">#259b24</Color>
+            <Color x:Key="LightGreen">#8BC34A</Color>
+            <Color x:Key="Lime">#CDDC39</Color>
+            <Color x:Key="Brown">#795548</Color>
+            <Color x:Key="TextBlack">#212121</Color>
+            <Color x:Key="Gray">#9e9e9e</Color>
+            <Color x:Key="BlueGray">#607d8b</Color>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
