--- a/src/Gab/Pages/MainPage.xaml
+++ b/src/Gab/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Gab"
-             x:Class="Gab.MainPage">
+             x:Class="Gab.Pages.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
