--- a/src/Gab/Pages/MeetingRoomsPage.xaml
+++ b/src/Gab/Pages/MeetingRoomsPage.xaml
@@ -5,14 +5,23 @@
              xmlns:lv="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:ptr="clr-namespace:Syncfusion.SfPullToRefresh.XForms;assembly=Syncfusion.SfPullToRefresh.XForms"
              xmlns:ds="clr-namespace:Syncfusion.DataSource;assembly=Syncfusion.DataSource.Portable"
-             xmlns:behaviors="clr-namespace:Gab.Behaviors;assembly=Gab"
+             xmlns:beh="clr-namespace:Gab.Behaviors;assembly=Gab"
              xmlns:models="clr-namespace:Gab.Shared.Models;assembly=Gab.Shared"
+             xmlns:converters="clr-namespace:Gab.Converters;assembly=Gab"
+             xmlns:ci="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             xmlns:iconize="clr-namespace:Plugin.Iconize;assembly=Plugin.Iconize"
              x:Class="Gab.Pages.MeetingRoomsPage"
              x:Name="MeetingRoomsPageName"
              Title="{Binding Resources[MeetingRoomsLabel]}">
 
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:NameToInitialsConverter x:Key="NameToInitialsConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <ptr:SfPullToRefresh x:Name="PullToRefresh"
-                         ProgressBackgroundColor="{StaticResource ColorPrimary}" ProgressStrokeColor="White"
+                         ProgressBackgroundColor="{StaticResource LightGreen}" ProgressStrokeColor="White"
                          RefreshContentHeight="50" RefreshContentWidth="50" TransitionMode="SlideOnTop"
                          IsRefreshing="{Binding IsRefreshing}" Refreshing="PullToRefresh_OnRefreshing">
         <ptr:SfPullToRefresh.PullableContent>
@@ -23,8 +32,6 @@
                            SelectionMode="None"                            
                            ItemSize="80"
                            ItemSpacing="0"
-                           FooterSize="60"
-                           IsStickyFooter="True"
                            TapCommand="{Binding MeetingRoomCommand}">
                 <lv:SfListView.DataSource>
                     <ds:DataSource>
@@ -36,18 +43,32 @@
                 <lv:SfListView.ItemTemplate>
                     <DataTemplate>
                         <cells:BaseCell x:Name="MeetingRoomCell">
-                            <Grid>
+                            <Grid Padding="10" ColumnSpacing="10">
                                 <Grid.Behaviors>
-                                    <behaviors:CollectionColoringBehavior x:TypeArguments="models:MeetingRoom" 
+                                    <beh:CollectionColoringBehavior x:TypeArguments="models:MeetingRoom" 
                                                   ObservableCollection="{Binding ItemsSource, Source={x:Reference MeetingRoomList}}"/>
                                 </Grid.Behaviors>
 
                                 <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="60"/>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="60"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Label Text="{Binding Name}"/>
+                                <Grid Grid.Column="0" HorizontalOptions="Start">
+                                    <ci:CircleImage WidthRequest="50" HeightRequest="50"
+                                                              VerticalOptions="Center" HorizontalOptions="Center"
+                                                              FillColor="Transparent" BorderColor="White" BorderThickness="2">
+                                    </ci:CircleImage>
+                                    <Label Text="{Binding Name, Converter={StaticResource NameToInitialsConverter}}"
+                                           VerticalOptions="Center" HorizontalOptions="Center" TextColor="White" FontSize="25" />
+                                </Grid>
+
+                                <Label Grid.Column="1" Text="{Binding Name}" TextColor="White"
+                                       VerticalOptions="Center" VerticalTextAlignment="Center" />
+
+                                <iconize:IconLabel Grid.Column="2" Text="fas-chevron-right" FontSize="15" TextColor="White"
+                                                   HorizontalOptions="Center"  VerticalTextAlignment="Center"/>
 
                             </Grid>
                         </cells:BaseCell>
