--- a/src/Gab/Pages/MeetingRoomPage.xaml
+++ b/src/Gab/Pages/MeetingRoomPage.xaml
@@ -4,11 +4,13 @@
              xmlns:lv="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:ptr="clr-namespace:Syncfusion.SfPullToRefresh.XForms;assembly=Syncfusion.SfPullToRefresh.XForms"
              xmlns:ds="clr-namespace:Syncfusion.DataSource;assembly=Syncfusion.DataSource.Portable"
+             xmlns:pb="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusion.SfProgressBar.XForms"
              xmlns:converters="clr-namespace:Gab.Converters;assembly=Gab"
              xmlns:ci="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              xmlns:iconize="clr-namespace:Plugin.Iconize;assembly=Plugin.Iconize"
-             x:Class="Gab.Pages.MeetingRoomPage"
-             Title="{Binding Name}">
+             xmlns:cells="clr-namespace:Gab.Cells;assembly=Gab"
+             x:Name="MeetingRoomPageName"
+             x:Class="Gab.Pages.MeetingRoomPage">
     
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -18,47 +20,81 @@
     
     <Grid RowSpacing="0">
         <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="2.5*"/>
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Row="0" x:Name="Free" IsVisible="{Binding Booked, Converter={StaticResource InverseBoolConverter}}" BackgroundColor="{StaticResource LightGreen}"
-                     VerticalOptions="Fill" HorizontalOptions="CenterAndExpand" Padding="10" Spacing="12">
-            <Label Text="{Binding Now, StringFormat='{}{0:hh\\:mm dddd, MMMM dd}'}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"/>
-            <Label Text="{Binding Resources[FreeLabel]}" TextColor="White" FontSize="Large" FontAttributes="Bold" 
-                   HorizontalOptions="Center" VerticalOptions="Center"/>
-            <Grid>
-                <ci:CircleImage WidthRequest="60" HeightRequest="60"
+        <Grid Grid.Row="0" Padding="10" BackgroundColor="{Binding MeetingRoomColor}">
+            <Label Text="{Binding MeetingRoom.Name}" TextColor="White" FontAttributes="Bold" FontSize="Large"
+                   VerticalOptions="Center" />
+        </Grid>
+
+        <Grid Grid.Row="1" x:Name="Free" IsVisible="{Binding Booked, Converter={StaticResource InverseBoolConverter}}" BackgroundColor="{Binding FreeColor}"
+              Padding="10" RowSpacing="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <StackLayout Grid.Row="0" Spacing="5">
+                <Label Text="{Binding Now, StringFormat='{}{0:HH\\:mm dddd, MMMM dd}'}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"/>
+                <Label Text="{Binding Resources[FreeLabel]}" TextColor="White" FontSize="Large" FontAttributes="Bold" 
+                       HorizontalOptions="Center" VerticalOptions="Center"/>
+            </StackLayout>
+           
+            <Grid Grid.Row="1">
+                <ci:CircleImage WidthRequest="70" HeightRequest="70"
                                 VerticalOptions="CenterAndExpand" HorizontalOptions="Center"
-                                FillColor="{StaticResource Green}" Opacity=".4" BorderColor="Transparent" BorderThickness="0">
+                                FillColor="{Binding FreeDarkColor}" BorderColor="Transparent" BorderThickness="0">
                 </ci:CircleImage>
                 <iconize:IconLabel Text="fas-plus" FontSize="35" TextColor="White"
                                    VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding CreateEventCommand}"/>
+                </Grid.GestureRecognizers>
             </Grid>
             
-            <Label Text="{Binding Resources[BookLabel]}" HorizontalOptions="Center" VerticalOptions="End"
+            <Label Grid.Row="2" Text="{Binding Resources[BookLabel]}" HorizontalOptions="Center" VerticalOptions="End"
                    TextColor="White"/>
-        </StackLayout>
-
-        <StackLayout Grid.Row="0" x:Name="Booked" IsVisible="{Binding Booked}" BackgroundColor="{StaticResource LightRed}"
-                     VerticalOptions="Fill" HorizontalOptions="CenterAndExpand" Padding="10" Spacing="12">
-            <Label Text="{Binding Now, StringFormat='{}{0:hh\\:mm dddd, MMMM dd}'}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"/>
-            <Label Text="{Binding Resources[BookedLabel]}" TextColor="White" FontSize="Large" FontAttributes="Bold" 
-                   HorizontalOptions="Center" VerticalOptions="Center"/>
-            <Grid>
-                <ci:CircleImage WidthRequest="60" HeightRequest="60"
-                                VerticalOptions="CenterAndExpand" HorizontalOptions="Center"
-                                FillColor="{StaticResource Red}" Opacity=".4" BorderColor="Transparent" BorderThickness="0">
-                </ci:CircleImage>
-                <iconize:IconLabel Text="fas-check" FontSize="35" TextColor="White"
-                                   VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+        </Grid>
+            
+        <Grid Grid.Row="1" x:Name="Booked" IsVisible="{Binding Booked}" BackgroundColor="{Binding BookedColor}"
+              Padding="10" RowSpacing="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <StackLayout Grid.Row="0" Spacing="5">
+                <Label Text="{Binding Now, StringFormat='{}{0:hh\\:mm dddd, MMMM dd}'}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"/>
+                <Label Text="{Binding Resources[BookedLabel]}" TextColor="White" FontSize="Large" FontAttributes="Bold" 
+                       HorizontalOptions="Center" VerticalOptions="Center"/>
+            </StackLayout>
+            
+            <Grid Grid.Row="1">
+                <pb:SfCircularProgressBar IsIndeterminate="False" ShowProgressValue="False"
+                                          TrackColor="{Binding BookedDarkColor}" ProgressColor="White"
+                                          Minimum="0" Maximum="100"
+                                          Progress="{Binding CurrentEventProgress}" AnimationDuration="{Binding CurrentEventDuration}"
+                                          IndicatorOuterRadius="1" IndicatorInnerRadius="0.9"
+                                          TrackOuterRadius="1" TrackInnerRadius=".9"
+                                          VerticalOptions="Center" Margin="0"
+                                          HeightRequest="70" WidthRequest="70">
+                    <pb:SfCircularProgressBar.Content>
+                        <iconize:IconLabel Text="fas-check" FontSize="35" TextColor="White"
+                                           VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+                    </pb:SfCircularProgressBar.Content>
+                </pb:SfCircularProgressBar>
             </Grid>
-
-            <Label Text="{Binding CurrentEvent.Subject}" HorizontalOptions="Center" VerticalOptions="End"
+            
+            <Label Grid.Row="2" Text="{Binding CurrentEvent.Subject}" HorizontalOptions="Center" VerticalOptions="End"
                    TextColor="White"/>
-        </StackLayout>
+        </Grid>
 
-        <ptr:SfPullToRefresh x:Name="PullToRefresh" Grid.Row="1"
+        <ptr:SfPullToRefresh x:Name="PullToRefresh" Grid.Row="2"
                          ProgressBackgroundColor="{StaticResource LightGreen}" ProgressStrokeColor="White"
                          RefreshContentHeight="50" RefreshContentWidth="50" TransitionMode="SlideOnTop"
                          IsRefreshing="{Binding IsRefreshing}" Refreshing="PullToRefresh_OnRefreshing">
@@ -80,22 +116,7 @@
                     </lv:SfListView.DataSource>
                     <lv:SfListView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="10" RowSpacing="10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="*"/>
-                                </Grid.RowDefinitions>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand" Spacing="10">
-                                    <Label Text="{Binding Start, StringFormat='{}{0:HH\\:mm}'}" VerticalOptions="Center" VerticalTextAlignment="Center"/>
-                                    <iconize:IconLabel Text="fas-arrow-right" FontSize="15" VerticalOptions="Center" VerticalTextAlignment="Center" />
-                                    <Label Text="{Binding End, StringFormat='{}{0:HH\\:mm}'}" VerticalOptions="Center" VerticalTextAlignment="Center"/>
-                                </StackLayout>
-                                <Label Grid.Row="1" Text="{Binding Subject}" FontAttributes="Bold" FontSize="Large"
-                                       VerticalOptions="Center" VerticalTextAlignment="Center"/>
-                                <Label Grid.Row="2" Text="{Binding Organizer}"
-                                       VerticalOptions="Center" VerticalTextAlignment="Center"/>
-                            </Grid>
+                            <cells:EventCell ParentBindingContext="{Binding Path=BindingContext, Source={x:Reference MeetingRoomPageName}}"/>
                         </DataTemplate>
                     </lv:SfListView.ItemTemplate>
                     <lv:SfListView.GroupHeaderTemplate>
