--- a/src/Gab/Pages/MeetingRoomPage.xaml
+++ b/src/Gab/Pages/MeetingRoomPage.xaml
@@ -95,7 +95,7 @@
         </Grid>
 
         <ptr:SfPullToRefresh x:Name="PullToRefresh" Grid.Row="2"
-                         ProgressBackgroundColor="{StaticResource LightGreen}" ProgressStrokeColor="White"
+                         ProgressBackgroundColor="{StaticResource Teal}" ProgressStrokeColor="White"
                          RefreshContentHeight="50" RefreshContentWidth="50" TransitionMode="SlideOnTop"
                          IsRefreshing="{Binding IsRefreshing}" Refreshing="PullToRefresh_OnRefreshing">
             <ptr:SfPullToRefresh.PullableContent>
