--- a/src/Gab/App.xaml
+++ b/src/Gab/App.xaml
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Gab.App">
     <Application.Resources>
         <ResourceDictionary>
 
-            <Color x:Key="ColorPrimary">#0073a6</Color>
-            <Color x:Key="ColorPrimaryDark">#1976D2</Color>
-            <Color x:Key="ColorPrimaryLight">#00bcd4</Color>
-            <Color x:Key="ColorAccent">#D38C23</Color>
+            <Color x:Key="ColorPrimary">#009688</Color>
+            <Color x:Key="ColorPrimaryDark">#00675b</Color>
+            <Color x:Key="ColorPrimaryLight">#52c7b8</Color>
+            <Color x:Key="ColorAccent">#E91E63</Color>
 
             <Color x:Key="GrayPrimary">#ADB7BE</Color>
             <Color x:Key="GrayLight">#ECF0F1</Color>
@@ -36,7 +36,7 @@
             <Color x:Key="LightGreen">#8BC34A</Color>
             <Color x:Key="Lime">#CDDC39</Color>
             <Color x:Key="Brown">#795548</Color>
-            <Color x:Key="TextBlack">#212121</Color>
+            <Color x:Key="GrayBlack">#424242</Color>
             <Color x:Key="Gray">#9e9e9e</Color>
             <Color x:Key="BlueGray">#607d8b</Color>
 
